--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,23 +26,31 @@
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
-          <td>コメント数： <%= @book.book_comments.count %></td>
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
           <td><%= @book.body %></td>
-          <td><%= render 'favorites/favorite', book: @book %></td>
+          <td id="favorite_btn_<%=@book.id%>">
+            <%= render 'favorites/favorite', book: @book %>
+          </td>
             <td><% if @book.user == current_user  %>
               <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
               <% end %>
               </td>
             <td><% if current_user == @book.user %>
-              <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
+              <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger",remote: true %>
                  <% end %>
                  </td>
         </tr>
         </tbody>
       </table>
 
-      <%= render "book_comments/index", book: @book %>
+      <div id="comment_index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
+      <div id="comment-form">
       <%= render "book_comments/book_comments", book: @book, book_comment: @book_comment %>
+    </div>
     </div>
   </div>
 </div>
