--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,6 +20,7 @@
           <%= render 'favorites/favorite', book: book %>
         </td>
         <td>コメント数： <%= book.book_comments.count %></td>
+        <td><%= render "books/static_rate", book: book %></td>
       </tr>
     <% end %>
   </tbody>
