--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,6 +33,7 @@
           <td id="favorite_btn_<%=@book.id%>">
             <%= render 'favorites/favorite', book: @book %>
           </td>
+          <td><%= render "static_rate", book: @book %> </td>
             <td><% if @book.user == current_user  %>
               <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
               <% end %>
@@ -43,8 +44,7 @@
                  </td>
         </tr>
         </tbody>
-      </table>
-
+      
       <div id="comment_index">
         <%= render "book_comments/index", book: @book %>
       </div>
